fix on small devices

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,11 +8,12 @@ h1, h2, h3 {
     font-size: calc(1.5em + 1vw);
 } 
 
-body {
+
+
+header{
     padding: 2em;
-    height: 100vh;
-    position: relative;
 }
+
  p{
     margin:0px;
     font-size: calc(.5em + 1vw);
@@ -20,10 +21,21 @@ body {
     font-weight: 800;
 }
 
-
+main{
+    padding: 2em;
+}
+footer{
+    padding: 2em;
+}
 .home-h1{
     margin: .5em 0em;
     margin-bottom: .8em;
+}
+
+.form{
+    display:flex;
+    flex-wrap: wrap;
+    width: 50vw;
 }
 
 .kurir{
@@ -46,10 +58,10 @@ body {
     width: 30%;
 }
 .email{
-border: 4px solid black;
-padding: .6em;
-border-radius: 1em;
-font-family: "Roboto", sans-serif;  
+    border: 4px solid black;
+    padding: .6em;
+    border-radius: 1em;
+    font-family: "Roboto", sans-serif;  
 }
 .submit{
     border-radius: 8px;
@@ -69,4 +81,14 @@ font-family: "Roboto", sans-serif;
 }
 .footer{
     margin-top: 25%;
+}
+
+.layout{
+    position: relative;
+}
+
+@media screen and (min-width: 700px) {
+    .form{
+        width: 40vw;
+    }
 }
